feat: add threaded comment support by introducing parentId to requirement comments
